--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body {
-  color: blue;
+  background: #1e1f24;
+  color: #333;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
@@ -8,13 +9,18 @@ body {
 }
 
 #cabecera {
-  background-color: #33A;
+  background-color: #37488b;
   box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
   color: white;
+  font-weight: bold;
   margin: 0;
   padding: 0.5em;
 }
 
+#cabecera #logo {
+  width: 20px;
+  vertical-align: middle;
+}
 #cabecera #tagline {
   padding: 0 0 0 1em;
   font-weight: normal;
@@ -35,4 +41,5 @@ body {
 
 #post {
   padding: 1em;
+  background: white;
 }
