--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body {
-  color: blue;
-  text-align: left;
+  color: #333;
+  text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   margin: 0;
@@ -35,4 +35,11 @@ body {
 
 #post {
   padding: 1em;
+}
+
+#footer {
+  background: #777;
+  color: white;
+  text-align: center;
+  padding: 0.5em;
 }
