--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,7 +44,7 @@ body {
 }
 
 #footer {
-  background: #777;
+  background-color: #37488b;
   color: white;
   text-align: center;
   padding: 0.5em;
